# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.584 2008-02-22 21:33:05 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --

CVS HEAD (????/??/??)
 - (2008/02/22) Improved performance of TicketSearch() function.
 - (2008/02/17) Removed not needed Encode::decode_utf8() in core module
    Kernel::System::Encode (only set of utf-8 stamp is needed).
 - (2008/02/17) Upgraded Mail::Tools from version 1.77 to 2.02 from CPAN.
 - (2008/02/12) Fixed bug# 2670 - "wide character" error when login with
    russian password.
    Note: It could be on older systems, that existing passwords are not
    longer valid. Just reset the password and everything will work fine.
 - (2008/02/12) Fixed bug# 1996 - Replaced 'U' & 'D' with respective arrow
    icons.
 - (2008/02/12) Improved Fix for bug# 1608 - Badly formatted calendar popup.
    Now the table width is explicity passed into DTL from the perl module
    and the customer calendar view has been fixed, too.
 - (2008/02/11) Added queue preferences - module support like for agents and
    customer to create easier extentions/addons for queues.
    See Developer-Manual for more information.
    NOTE: table sla need to be modified - use scripts/DBUpdate-to-2.3.*.sql
 - (2008/02/11) Added escalation warning feature. So agents will be notified
    before a ticket will escalate. This time point can be configured in the
    admin interface for queue and sla settings.
    NOTE: table queue need to be modified - use scripts/DBUpdate-to-2.3.*.sql
 - (2008/02/04) Fixed bug# 1608 - Badly formatted calendar popup.
 - (2008/02/04) Fixed bug# 2657 - Improved regexp in RPM spec files to detect
    already existing "otrs" user (it was also matching on xxxotrsxxx names).