@@ -152,7 +152,7 @@ TimeWorkingHours
 
 -->
 <otrs_config version="1.0" init="Application">
-    <CVS>$Id: Ticket.xml,v 1.159 2008-02-12 13:36:41 ot Exp $</CVS>
+    <CVS>$Id: Ticket.xml,v 1.160 2008-02-23 00:18:44 martin Exp $</CVS>
     <ConfigItem Name="Ticket::Hook" Required="1" Valid="1">
         <Description Lang="en">The identifier for a ticket, e.g. Ticket#, Call#, MyTicket#. The default is Ticket#.</Description>
         <Description Lang="de">Ticket-Identifikator, z. B. Ticket#,Call#, MyTicket#. Als Standard wird Ticket# verwendet.</Description>
@@ -6060,8 +6060,8 @@ $QData{"Signature"}
         <Setting>
             <Hash>
                 <Item Key="Module">Kernel::System::Ticket::CustomerPermission::CustomerUserIDCheck</Item>
-                <Item Key="Required">0</Item>
-                <Item Key="Granted">1</Item>
+                <Item Key="Required">1</Item>
+                <Item Key="Granted">0</Item>
             </Hash>
         </Setting>
     </ConfigItem>
