@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.584 2008-02-22 21:33:05 martin Exp $
+# $Id: CHANGES,v 1.585 2008-02-23 00:18:44 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,8 @@
 # --
 
 CVS HEAD (????/??/??)
+ - (2008/02/23) Fixed bug# 2544 - Customer with RO can update ticket in
+    customer panel (wrong SysConfig setting).
  - (2008/02/22) Improved performance of TicketSearch() function.
  - (2008/02/17) Removed not needed Encode::decode_utf8() in core module
     Kernel::System::Encode (only set of utf-8 stamp is needed).
